--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -17,3 +17,16 @@ h1, h2, h3, h4, h5, h6 {
 	padding: 0;
 }
 
+body {
+  background: url('/assets/white_sand.png');
+  box-shadow: 0px 1px 3px #2a2a2a;
+  /* Impact-based sans serif stack */
+  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans-serif;
+}
+
+.navbar.navbar-inverse {
+  background:url('/assets/noisy_net.png');
+  border-radius: 0;
+}
+
+
