updated the app title font

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -29,4 +29,8 @@ body {
   border-radius: 0;
 }
 
-
+.navbar-inverse .navbar-brand {
+	color: #557AC9;
+	font-family: 'special_eliteregular', cursive;
+	font-size: 26px;
+}
