--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -41,18 +41,49 @@
 
 <div class="clear"></div>
 
-<!-- <%= simple_form_for @comment, :url => place_comments_path(@place) do |f| %>
-	<%= f.input :message %>
-	<%= f.input :rating, :as => :select, :collection => Comment::RATINGS %>
-	<%= f.submit "Add a Comment", :class => 'btn btn-primary' %>
-<% end %> -->
+<!-- Photo Modal -->
+<div class="modal fade" id="photoModal" tabindex="-1" role="dialog" aria-labelledby="photoModalLabel" aria-hidden="true">
+  	<div class="modal-dialog">
+    	<div class="modal-content">
+     		<div class="modal-header">
+        		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        		<h4 class="modal-title" id="photoModalLabel">Add a photo</h4>
+      		</div>
+  			<%= simple_form_for @photo, :url => place_photos_path(@place) do |f| %>
+        	<div class="modal-body">
+        		<%= f.input :picture, label: "Photo" %>
+          		<%= f.input :caption %>
+        	</div>
+       	 	<div class="modal-footer">
+          		<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          		<%= f.submit "Add a Photo", :class => 'btn btn-primary' %>
+        	</div>
+      <% end %>
+    </div>
+  </div>
+</div>
 
-<!-- Button trigger modal -->
-<!-- <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-  Add a comment - 1
-</button> -->
+<div class="col-xs-10 col-xs-offset-1">
+	<h1 class="pull-left">Photos</h1>
+	<!-- Button trigger modal -->
+	<button class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#photoModal">
+			Add a photo
+	</button>
+</div>
 
-<!-- Modal -->
+<div class="clear"></div>
+
+<% @place.photos.each do |photo| %>
+	<div class="col-xs-12 col-sm-6">
+		<blockquote>
+			<%= image_tag photo.picture %>
+	      	<%= photo.caption %>	
+		</blockquote>
+	</div>
+<% end %>
+
+
+<!-- Comment Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   	<div class="modal-dialog">
     	<div class="modal-content">
