Added email functionality

--- a/app/views/notification_mailer/comment_added.text.erb
+++ b/app/views/notification_mailer/comment_added.text.erb
@@ -1,7 +1,9 @@
 Hey There!
 
-Congrats! A comment has been added on Horster
+Congrats! A comment has been added on Horster.
+
+Check it out, <%= place_url(@place) %>
 
 
-Boom!
+Go Horses!
 pete @ Horster	
