--- a/app/views/notification_mailer/comment_added.html.erb
+++ b/app/views/notification_mailer/comment_added.html.erb
@@ -1,7 +1,8 @@
 <p>Hey There!</p>
 <p>
-	Congrats! <b>A comment has been added on Horster</b>
+	Congrats! <b>A comment has been added on Horster</b>.
+	Check it out <%= link_to 'here', place_url(@place) %>.
 </p>
 
-Boom!<br />
+Go Horses!<br />
 pete @ Horster	
