--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -76,7 +76,7 @@
 <% @place.photos.each do |photo| %>
 	<div class="col-xs-12 col-sm-6">
 		<blockquote>
-			<%= image_tag photo.picture %>
+			<%= image_tag photo.picture, :class => 'img-responsive' %>
 	      	<%= photo.caption %>	
 		</blockquote>
 	</div>
