--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -27,6 +27,8 @@ body {
 .navbar.navbar-inverse {
   background:url('/assets/noisy_net.png');
   border-radius: 0;
+  box-shadow: 0px 1px 3px #2a2a2a;
+  margin-bottom: 0;
 }
 
 .navbar-inverse .navbar-brand {
@@ -106,4 +108,23 @@ blockquote:before {
 }
 blockquote p {
   display: inline;
+}
+
+.carousel-inner > .item > img, .carousel-inner > .item > a > img {
+  height: 550px;
+}
+
+.carousel-caption {
+  font-family: 'Helvetica Neue', Helvetica, sans-serif;
+  font-size: 60px;
+  font-weight: 100;
+  text-shadow: rgba(0,0,0,0.95) 2px 2px;
+  background-color: rgba(0,0,0,0.5);
+  width: 100%;
+  position: absolute;
+  left:0;
+}
+
+.carousel {
+  box-shadow: 0px 3px 8px #2a2a2a;
 }
