--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -8,21 +8,27 @@
 	<ol class="carousel-indicators">
 		<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
 		<li data-target="#carousel-example-generic" data-slide-to="1"></li>
-		<!-- <li data-target="#carousel-example-generic" data-slide-to="2"></li> -->
+	    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
 	</ol>
 
 	<!-- Wrapper for slides -->
 	<div class="carousel-inner">
 		<div class="item active">
-			<%= image_tag 'slider1.jpg' %>
+			<%= image_tag 'slider1.jpg', :class => 'img-responsive' %>
 			<div class="carousel-caption">
-				Saratoga Race Track 1907
+			Saratoga Race Track 1907
 			</div>
 		</div>
 		<div class="item">
-			<%= image_tag 'slider2.jpg' %>
+			<%= image_tag 'slider2.jpg', :class => 'img-responsive' %>
 			<div class="carousel-caption">
 				Santa Anita
+			</div>
+		</div>
+		<div class="item">
+			<%= image_tag 'slider3.jpg', :class => 'img-responsive' %>
+			<div class="carousel-caption">
+				Keeneland Race Course
 			</div>
 		</div>
 	</div>
