a couple cosmetic fixes

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -112,6 +112,7 @@ blockquote p {
 
 .carousel-inner > .item > img, .carousel-inner > .item > a > img {
   height: 550px;
+  width: 100%;
 }
 
 .carousel-caption {
